# Fastapi

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile_  README.md  alembic.ini  alembic_setup.sh  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  main.py  notes.txt  pyproject.toml  start.sh
.github/workflow/: build-deploy.yml
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 0337bb22485d_create_posts_table.py  16a8e75bf05a_auto_vote.py  24762a2dec60_create_post_table_step_1.py  6a5fe222b44d_add_last_column_to_posts_table.py  7b915c3e3a31_add_foreign_key_to_post_table_step_4.py  87043120cb1a_add_auto_vote_phone_number_step_6.py  8c00e1d1779e_add_phone_number.py  b1fcc93acf0c_add_user_table.py  cc9d1baffb9d_add_content_column_to_post_table_step_2.py  df2473fd9880_auto_generate_everything_step_1.py  f0f29dadfbe4_add_user_table_step_3.py  f79225fc91ef_add_last_cols_in_post_table_step_5.py  fb2dbfa00200_add_content_column_to_posts_table.py
app/: ORM_models.py  config.py  constant.py  constants.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  oauth2.py  posts.py  users.py  vote.py
tests/: conftest.py  database.py  test_users.py  test_votes.py
