[tool.poetry]
name = "social_media_api"
version = "0.1.0"
description = ""
authors = ["Pankaj <pc19d@fsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
unicorn = "^2.1.1"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
